--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@playwright/test": "^1.44.0",
     "@types/node": "^20.12.12",
     "@zerostep/playwright": "^0.1.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
